# ec-tools

./: pyproject.toml
.github/workflows/: doc.yml  lint.yml  test.yml
doc/: api.md  conf.py  index.md  semiint.md
doc/api/: helper.md
docs/: .buildinfo  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js  semiint.html
ec-tools/Seminar/: Semiintegration_Doku.ipynb
ec-tools/Seminar/py_functions/: Semi_Operators.py  Semi_Operators_numba.py  Semi_Operators_transonic.py  cumulative_trapezoid_ref_values.csv  hemispherical_electrode.py
ec-tools/Seminar/py_functions/Benchmark/: Benchmark_Numba.py  Benchmark_Python.py  Print_Benchmark.ipynb
ec-tools/Seminar/py_functions/Benchmark/results/: numba_Benchmark_Results.csv  transonic_Benchmark_Results.csv
ec-tools/Seminar/py_functions/TestFiles/: CreateTestFiles.py
ec-tools/Seminar/rs_functions/: Untitled.ipynb  rust_error_calc.py
ec-tools/Seminar/rs_functions/rs_benchmark/: Rust_Benchmark_Results.csv
ec-tools/Seminar/rs_functions/rs_benchmark/results/: rs_benchmark_1000.csv  rs_benchmark_10000.csv  rs_benchmark_12500.csv  rs_benchmark_15000.csv  rs_benchmark_20000.csv  rs_benchmark_2500.csv  rs_benchmark_5000.csv  rs_benchmark_7500.csv  rs_benchmark_time.csv
ec-tools/Seminar/rs_functions/rs_benchmark/src/: Semi_int.rs  hemispherical_electrode.rs  main.rs
ec_tools/: __init__.py  helper.py  potential_reference.py  pythran.cfg  reference_potential.py  semi_integration.py
ec_tools/Seminar/: Semiintegration_Doku.ipynb
ec_tools/Seminar/py-functions/: Semi-Operators.py
ec_tools/Seminar/py-functions/TestFiles/: CheckDocTest.py  Testfile_1.csv  Testfile_2.csv  Testing.ipynb
ec_tools/Seminar/py_functions/Benchmark/: Benchmark_Python.py  Benchmark_Transonic.py  Print_Benchmark.ipynb  Show_Benchmark.py
ec_tools/Seminar/py_functions/Benchmark/results/: Py_Benchmark_Results.csv  rust_Benchmark_Results.csv
ec_tools/Seminar/rs_functions/rs_benchmark/: cumulative_trapezoid_ref_values.csv  rust_Benchmark_Results.csv  rust_Benchmark_Results_time.csv
ec_tools/Seminar/rs_functions/rs_benchmark/src/: Semi_int.rs  main.rs  myfun.rs
tests/: test_cycles_indices.py
tests/data/: eclab-window-opening.tsv
