[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ec-tools"
license = "GPL-3.0-or-later"
description = "tools to work with electrochemical data"
readme      = "README.md"
requires-python = ">=3.10.0"
dependencies    = [ "numpy>=2.0.3,<3", "transonic>=0.7.3,<0.9" ]

version = "0.1.0"

[project.optional-dependencies]
numba = ["numba"]
pythran = ["pythran"]

[tool.setuptools]
packages = ["ec_tools",]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "linux-aarch64", "osx-64", "osx-arm64", "win-64"]

[tool.pixi.environments]
python-310 = ["test", "python-310", "numba", "pythran"]
python-311 = ["test", "python-311", "numba", "pythran"]
python-312 = ["test", "python-312", "numba", "pythran"]
python-313 = ["test", "python-313", "numba", "pythran"]
python-314 = ["test", "python-314", "numba", "pythran"]

benchmark = ["benchmark", "numba", "pythran"]

dev = ["dev", "doc", "test", "benchmark", "lint", "numba", "pythran"]

[tool.pixi.dependencies]
numpy = "*"
transonic = "*"

[tool.pixi.pypi-dependencies]
ec-tools = { path = ".", editable = true }

[tool.pixi.feature.python-310.dependencies]
python = "3.10.*"

[tool.pixi.feature.python-311.dependencies]
python = "3.11.*"

[tool.pixi.feature.python-312.dependencies]
python = "3.12.*"

[tool.pixi.feature.python-313.dependencies]
python = "3.13.*"

[tool.pixi.feature.python-314.dependencies]
python = "3.14.*"

[tool.pixi.feature.test.dependencies]
pytest = "*"
pytest-xdist = "*"
pytest-doctestplus = "*"
scipy = "*"

[tool.pixi.feature.test.tasks]
doctest = "pytest -n auto --doctest-modules ec_tools"

[tool.pixi.feature.numba.dependencies]
numba = "*"

[tool.pixi.feature.pythran.dependencies]
pythran = "*"

[tool.pixi.feature.benchmark.dependencies]
scipy = "*"

[tool.pixi.feature.benchmark.tasks]
benchmark = "TODO"

[tool.pixi.feature.lint.dependencies]
ruff = ">=0.15.0,<0.16"

[tool.pixi.feature.lint.tasks]
pylint = "ruff check ec_tools"
black = "ruff format ec_tools"
isort = "ruff check --select I ec_tools"
lint = { depends-on = ["pylint", "black", "isort"]  }

[tool.pixi.feature.doc.dependencies]
jupytext = "*"
myst-parser = "*"
myst-nb = "*"
sphinx = "*"
sphinx-autobuild = "*"
sphinx-design = "*"
sphinx_rtd_theme = "*"
sphinxcontrib-bibtex = "*"

[tool.pixi.feature.doc.pypi-dependencies]
"sphinxcontrib.katex" = "*"

[tool.pixi.feature.doc.tasks]
doc = "cd doc && make html SPHINXOPTS='-W -n --keep-going'"
doc-watch = "sphinx-autobuild doc doc/generated/html --watch 'ec_tools/*'"
linkcheck = "cd doc && make linkcheck"

[tool.pixi.feature.dev.dependencies]
pip = "*"
conda = "*"

[tool.ruff]
lint.select = ["E", "F", "W", "B"]
lint.ignore = [
    "B905",
]
lint.fixable = ["E", "F", "W", "B"]
line-length = 115
