[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ec-tools"
license = "GPL-3.0-or-later"
description = "tools to work with electrochemical data"
readme      = "README.md"
requires-python = ">=3.10.0"
dependencies    = [ "numpy>=2.0.3,<3", "transonic>=0.7.3,<0.9" ]

version = "0.1.0"

[project.optional-dependencies]
numba = ["numba"]
# scipy-openblas64 bundles a self-contained OpenBLAS (lib + headers) so the pythran
# backend can compile BLAS-backed numpy routines (np.convolve in the Riemann core)
# without a system BLAS. It ships wheels for linux/macos (incl. arm64) and windows;
# on any platform without a wheel pip simply skips it (environment marker below) and
# the numba backend or a system BLAS can be used instead. ec_tools/__init__.py points
# pythran at it automatically when present.
pythran = [
    "pythran",
    "scipy-openblas64; platform_machine in 'x86_64 AMD64 aarch64 arm64'",
]

[tool.setuptools]
packages = ["ec_tools",]

[tool.setuptools.package-data]
ec_tools = ["py.typed", "pythran.cfg"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "linux-aarch64", "osx-64", "osx-arm64", "win-64"]

[tool.pixi.environments]
python-310 = ["test", "python-310", "numba", "pythran-backend"]
python-311 = ["test", "python-311", "numba", "pythran-backend"]
python-312 = ["test", "python-312", "numba", "pythran-backend"]
python-313 = ["test", "python-313", "numba", "pythran-backend"]
python-314 = ["test", "python-314", "numba", "pythran-backend"]

benchmark = ["benchmark", "numba", "pythran-backend"]

dev = ["dev", "doc", "test", "benchmark", "lint", "numba", "pythran-backend"]

[tool.pixi.dependencies]
numpy = "*"
transonic = "*"

[tool.pixi.pypi-dependencies]
ec-tools = { path = ".", editable = true }

[tool.pixi.feature.python-310.dependencies]
python = "3.10.*"

[tool.pixi.feature.python-311.dependencies]
python = "3.11.*"

[tool.pixi.feature.python-312.dependencies]
python = "3.12.*"

[tool.pixi.feature.python-313.dependencies]
python = "3.13.*"

[tool.pixi.feature.python-314.dependencies]
python = "3.14.*"

[tool.pixi.feature.test.dependencies]
pytest = "*"
pytest-xdist = "*"
pytest-doctestplus = "*"
scipy = "*"

[tool.pixi.feature.test.tasks]
doctest = "pytest -n auto --doctest-modules ec_tools"

[tool.pixi.feature.numba.dependencies]
numba = "*"

[tool.pixi.feature.pythran-backend.dependencies]
pythran = "*"
# Provides cblas.h, required when pythran compiles numpy routines that go through
# numpy/dot.hpp (e.g. np.convolve used in the Riemann semi-integration core).
blas-devel = "*"

[tool.pixi.feature.benchmark.dependencies]
scipy = "*"

[tool.pixi.feature.benchmark.tasks]
benchmark = "TODO"

[tool.pixi.feature.lint.dependencies]
ruff = ">=0.15.17,<0.16"
ty = ">=0.0.49,<0.0.50"

[tool.pixi.feature.lint.tasks]
pylint = "ruff check ec_tools"
black = "ruff format ec_tools"
isort = "ruff check --select I ec_tools"
ty = "ty check --python $CONDA_PREFIX ec_tools"
lint = { depends-on = ["pylint", "black", "isort", "ty"]  }

[tool.pixi.feature.doc.dependencies]
jupytext = "*"
myst-parser = "*"
myst-nb = "*"
sphinx = "*"
sphinx-autobuild = "*"
sphinx-design = "*"
sphinx_rtd_theme = "*"
sphinxcontrib-bibtex = "*"

[tool.pixi.feature.doc.pypi-dependencies]
"sphinxcontrib.katex" = "*"

[tool.pixi.feature.doc.tasks]
doc = "cd doc && make html SPHINXOPTS='-W -n --keep-going'"
doc-watch = "sphinx-autobuild doc doc/generated/html --watch 'ec_tools/*'"
linkcheck = "cd doc && make linkcheck"

[tool.pixi.feature.dev.dependencies]
pip = "*"
conda = "*"

[tool.ruff]
lint.select = ["E", "F", "W", "B"]
lint.ignore = [
    "B905",
]
lint.fixable = ["E", "F", "W", "B"]
line-length = 115

[tool.ty.environment]
# Check against the oldest supported interpreter (see requires-python).
python-version = "3.10"
